fix img show improperly if the size is too small

--- a/scss/card.view.scss
+++ b/scss/card.view.scss
@@ -55,14 +55,13 @@
         display: block;
         margin-left: auto;
         margin-right: auto;
-        width:100%;
-        max-width: 500px;
+        max-width: 100%;
         margin-top:5px;
       }
 
       img[src$=".gif"]{
         height:auto;
-        max-width: 280px;
+        max-width: 100%;
         width:auto!important;
       }
 
